src/objects/BMCServiceDesk__Service_Target_Criteria__c.object
<CustomObject>
    <description>This object allows you to store data for service target criteria conditions.</description>
    <fields>
        <fullName>BMCServiceDesk__FKService_Target__c</fullName>
        <label>Service Target</label>
        <referenceTo>BMCServiceDesk__Service_Target__c</referenceTo>
        <relationshipLabel>Service Target Criteria</relationshipLabel>
        <relationshipName>Service_Target_Criteria</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Field_Info__c</fullName>
        <description>This field stores the API Name of the field on which ST criteria is defined.</description>
        <label>Field Info</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Grouping_Operator__c</fullName>
        <description>This field stores Logical Operators (1 for AND, 0 for OR).</description>
        <label>Grouping Operator</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Operand__c</fullName>
        <description>This field stores the value of ST criteria condtiion.</description>
        <label>Operand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Operator__c</fullName>
        <description>This field stores the operator of ST criteria condition.</description>
        <label>Operator</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Order_Index__c</fullName>
        <description>This field stores the order/sequence of ST criteria condtions.</description>
        <label>Order Index</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ST_Criteria_Type__c</fullName>
        <description>This field stores type of the condition
0 - ST Criteria condition
1 - Clock start condition
2 - Clock stop condition
3 - Clock pause condition</description>
        <label>ST Criteria Type</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Service Target Criteria</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Service Target Criteria #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Target Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>